# compass

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
docs/: HOSTING.md
scripts/: seed_db.py
src/compass/: __init__.py  acceptance.py  ado_connector.py  audit.py  auth.py  branding.py  claude_client.py  db.py  exports.py  kpi.py  rag.py  spend_cap.py  state.py  stories.py
src/compass/pages/: __init__.py  audit_log.py  clin_summary.py  command_center.py  feature_value.py  hybrid_acceptance.py  login.py  readiness.py  risks.py  settings_page.py  story_builder.py
tests/: test_acceptance.py  test_auth.py  test_kpi.py  test_rag.py  test_spend_cap.py  test_stories.py
